Closed
Bug 69869
Opened 25 years ago
Closed 25 years ago
Optimize initial reflow case for selects
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9
People
(Reporter: rods, Assigned: rods)
Details
Attachments
(1 file)
|
14.55 KB,
patch
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•25 years ago
|
||
accepting
Status: NEW → ASSIGNED
Summary: Optimaize initial reflow case for selects → Optimize initial reflow case for selects
Target Milestone: --- → mozilla0.9
| Assignee | ||
Comment 2•25 years ago
|
||
Updated•25 years ago
|
Group: netscapeconfidential?
Comment 3•25 years ago
|
||
Patch looks good, but what is with:
+ //lcf->SetPassId(1);
and
+ //lcf->SetPassId(2); ???
I know I am new to layout, but can you document what the passes signify, and why
you are limiting work to certain passes (or at least tell me if it is otherwise
common knowledge)?
Also, what is the purpose of these assertions, and why the constant '100000'?
+ if (NS_FAILED(res)) {
+ NS_ASSERTION(aDesiredSize.width < 100000, "Width is still
NS_UNCONSTRAINEDSIZE");
+ NS_ASSERTION(aDesiredSize.height < 100000, "Height is still
NS_UNCONSTRAINEDSIZE");
pending responses to above queries, sr=attinasi
Comment 4•25 years ago
|
||
patch looks good
r=kmcclusk@netscape.com
Updated•25 years ago
|
Group: netscapeconfidential?
Component: HTML Form Controls → Installer
| Assignee | ||
Comment 6•25 years ago
|
||
What do you mean bugzilla strangeness?
| Assignee | ||
Comment 7•25 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
QA contact changed to vladimire@netscape.com
QA Contact: bsharma → vladimire
You need to log in
before you can comment on or make changes to this bug.
Description
•