Now only doing 1 reflow for each reflow request in the ListControlFrame for initial and full resize reflows Bug 69869 r=kmcclusk sr=attinasi