layout/html/forms/src/nsComboboxControlFrame.h
@@ -278,6 +278,7 @@ protected:
   // static class data member for Bug 32920
   // only one control can be focused at a time
   static nsComboboxControlFrame * mFocused;
+  static nscoord                  mCachedScrollbarWidth;
 
 #ifdef DO_REFLOW_COUNTER
   PRInt32 mReflowId;
